--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,14 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# Switching panes/windows in headless
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key H previous-window
+bind-key L next-window
+
 bind-key q confirm-before kill-pane
 bind-key Q confirm-before kill-window
 
