--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,26 +1,16 @@
-#set -g utf-8 on
 set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
-bind R source-file ~/.tmux.conf \; display-message " Config reloaded.."
+bind R source-file ~/.tmux/.tmux.conf \; display-message " Config reloaded."
 set-window-option -g mode-keys vi
 
-#Alt+Arrow keys to switch pane
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-#Shift+Arrow keys to switch window
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
-# Switching panes/windows in headless
+# Switching panes/windows
 bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key k select-pane -U
 bind-key j select-pane -D
+
 bind-key H previous-window
 bind-key L next-window
 
@@ -40,25 +30,22 @@ set -g status-fg default
 set -g status-justify left
 
 set -g status-left ""
-set -g status-right ""
-
-set -g history-limit 5000
-
-set -g display-time 4000
+set -g status-right "%a %m-%d %H:%M | #(whoami)@#H"
 
 set -g base-index 1
 
 setw -g aggressive-resize on
 
-#new-session -n $HOST
+#To install Plugin Manager
+#git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+#Prefix + I  to install plugins
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-run '~/.tmux/plugins/tpm/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-save-interval '5'
 set -g @continuum-restore 'on'
 
-#set -g default-terminal "screen-256color"
+run -b '~/.tmux/plugins/tpm/tpm'
