--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,12 +5,7 @@ unbind C-b
 bind R source-file ~/.tmux/.tmux.conf \; display-message " Config reloaded."
 set-window-option -g mode-keys vi
 
-# Switching panes/windows
-bind-key h select-pane -L
-bind-key l select-pane -R
-bind-key k select-pane -U
-bind-key j select-pane -D
-
+# Switching windows
 bind-key H previous-window
 bind-key L next-window
 
@@ -22,15 +17,16 @@ bind-key Q confirm-before kill-window
 bind-key b set-option status
 
 set -g status on
+set -g status-keys vi
 
 set -g allow-rename off
 
 set -g status-bg default
 set -g status-fg default
-set -g status-justify left
+set -g status-justify centre
 
-set -g status-left ""
-set -g status-right "%a %m-%d %H:%M | #(whoami)@#H"
+set -g status-left " #S #{prefix_highlight}"
+set -g status-right "%a %m-%d %H:%M | #(whoami)@#H "
 
 set -g base-index 1
 
@@ -42,6 +38,11 @@ setw -g aggressive-resize on
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @prefix_highlight_fg 'black'
+set -g @prefix_highlight_bg 'white'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
