--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,8 +6,8 @@ bind R source-file ~/.tmux/.tmux.conf \; display-message " Config reloaded."
 set-window-option -g mode-keys vi
 
 # Switching windows
-bind-key H previous-window
-bind-key L next-window
+bind-key p previous-window
+bind-key n next-window
 
 bind-key q confirm-before kill-pane
 bind-key Q confirm-before kill-window
@@ -16,7 +16,7 @@ bind-key Q confirm-before kill-window
 
 bind-key b set-option status
 
-set -g status on
+set -g status off
 set -g status-keys vi
 
 set -g allow-rename off
@@ -29,6 +29,8 @@ set -g status-left " #S #{prefix_highlight}"
 set -g status-right "%a %m-%d %H:%M | #(whoami)@#H "
 
 set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
 
 setw -g aggressive-resize on
 
