--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,7 @@ bind-key Q confirm-before kill-window
 
 bind-key b set-option status
 
-set -g status off
+set -g status on
 set -g status-keys vi
 
 set -g allow-rename off
