--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,4 @@
-set -g prefix C-a
-bind C-a send-prefix
-unbind C-b
-
-bind R source-file ~/.tmux/.tmux.conf \; display-message " Config reloaded."
+bind R source-file ~/.tmux.conf \; display-message " Config reloaded."
 set-window-option -g mode-keys vi
 
 # Switching windows
@@ -26,7 +22,7 @@ set -g status-fg default
 set -g status-justify centre
 
 set -g status-left " #S #{prefix_highlight}"
-set -g status-right "%a %m-%d %H:%M | #(whoami)@#H "
+set -g status-right "%Y-%m-%d (%a) %R | #(whoami)@#H "
 
 set -g base-index 1
 set -g pane-base-index 1
