--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ bind-key Q confirm-before kill-window
 
 bind-key b set-option status
 
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+
 set -g status on
 set -g status-keys vi
 
