--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ set-window-option -g mode-keys vi
 bind-key p previous-window
 bind-key n next-window
 
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+
 bind-key q confirm-before kill-pane
 bind-key Q confirm-before kill-window
 
