--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 bind R source-file ~/.tmux.conf \; display-message " Config reloaded."
 set-window-option -g mode-keys vi
 
+set-option -sa terminal-features ',alacritty:RGB'
+
 # Switching windows
 bind-key p previous-window
 bind-key n next-window
