--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,7 @@ setw -g aggressive-resize on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_fg 'black'
