--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 nushell/*
 !nushell/config.nu
 !nushell/env.nu
+
+fish/completions/
+fish/functions/
+fish/conf.d/
+fish/fish_variables
+fish/fish.tmp.*
+
