--- a/ghostty/config
+++ b/ghostty/config
@@ -1,31 +1,26 @@
-#font-family = FiraCode Nerd Font
-font-family = DepartureMono Nerd Font
+font-family = FiraCode Nerd Font Mono
+# font-family = DepartureMono Nerd Font
 font-feature = -calt
 font-feature = -liga
 font-feature = -dlig
-font-size = 12
+font-size = 15
 font-thicken = true
+font-thicken-strength = 255
 
 window-save-state = always
 minimum-contrast = 1.1
-#theme = dark:Tomorrow Night Bright, light:Tomorrow
-theme = dark:zenbones_dark, light:zenbones_light
-#theme = dark:carbonfox, light:dayfox
+theme = dark:Zenbones Dark, light:ZenBones Light
 background-blur-radius = 30
-background-opacity = 0.9
-
-macos-titlebar-style = native
-# TODO: broken for new tabs?:
-macos-titlebar-style = transparent
-
-cursor-style = block
-cursor-style-blink = true
-# TODO: fish shell doesn't set block cursor for some reason:
-shell-integration-features = no-cursor
+background-opacity = 0.75
+window-padding-x = 5
+window-padding-y = 5
 
 macos-option-as-alt = left
-keybind = cmd+z=toggle_split_zoom
+keybind = shift+escape=toggle_split_zoom
 
 command = /opt/homebrew/bin/fish -l
+
+# TODO: ideally new windows would be home dir while new tabs would inherit wdir
+# window-inherit-working-directory = false
 
 auto-update = off
