--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,83 +1,160 @@
 {
-	"agent": {
-		"profiles": {
-			"ask": {
-				"name": "Ask",
-				"tools": {
-					"contents": true,
-					"diagnostics": true,
-					"fetch": true,
-					"list_directory": true,
-					"project_notifications": false,
-					"now": true,
-					"find_path": true,
-					"read_file": true,
-					"open": true,
-					"grep": true,
-					"thinking": true,
-					"web_search": true,
-					"copy_path": false
-				},
-				"enable_all_context_servers": false,
-				"context_servers": {}
-			}
-		},
-		"default_profile": "write",
-		"always_allow_tool_actions": true,
-		"default_model": {
-			"provider": "anthropic",
-			"model": "claude-sonnet-4-latest"
-		}
-	},
+  "scrollbar": {
+    "diagnostics": "all",
+    "axes": {
+      "horizontal": true,
+      "vertical": true
+    }
+  },
+  "minimap": {
+    "current_line_highlight": "all",
+    "thumb": "always",
+    "display_in": "active_editor",
+    "show": "auto"
+  },
+  "toolbar": {
+    "code_actions": true
+  },
+  "indent_guides": {
+    "enabled": true,
+    "line_width": 2,
+    "active_line_width": 2,
+    "coloring": "fixed",
+    "background_coloring": "disabled"
+  },
+  "outline_panel": {
+    "button": true
+  },
+  "git": {
+    "inline_blame": {
+      "show_commit_summary": true
+    },
+    "git_gutter": "tracked_files"
+  },
+  "window_decorations": "client",
+  "bottom_dock_layout": "contained",
+  "tabs": {
+    "show_close_button": "hover",
+    "show_diagnostics": "errors",
+    "close_position": "left",
+    "git_status": true,
+    "file_icons": true
+  },
+  "project_panel": {
+    "hide_hidden": false,
+    "hide_root": false,
+    "auto_fold_dirs": true,
+    "file_icons": true,
+    "folder_icons": true,
+    "git_status": true,
+    "entry_spacing": "comfortable",
+    "hide_gitignore": false,
+    "dock": "left",
+    "button": true
+  },
+  "title_bar": {
+    "show_branch_icon": false,
+    "show_onboarding_banner": true,
+    "show_user_picture": false,
+    "show_menus": false,
+    "show_sign_in": false
+  },
+  "completion_menu_scrollbar": "auto",
+  "scroll_beyond_last_line": "vertical_scroll_margin",
+  "vertical_scroll_margin": 8.0,
+  "autosave": "on_focus_change",
+  "helix_mode": false,
+  "buffer_line_height": "standard",
+  "agent": {
+    "profiles": {
+      "ask": {
+        "name": "Ask",
+        "tools": {
+          "contents": true,
+          "diagnostics": true,
+          "fetch": true,
+          "list_directory": true,
+          "project_notifications": false,
+          "now": true,
+          "find_path": true,
+          "read_file": true,
+          "open": true,
+          "grep": true,
+          "thinking": true,
+          "web_search": true,
+          "copy_path": false
+        },
+        "enable_all_context_servers": false,
+        "context_servers": {}
+      }
+    },
+    "default_profile": "write",
+    "always_allow_tool_actions": true,
+    "default_model": {
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-latest"
+    }
+  },
 
-	"theme": {
-		"mode": "system",
-		"dark": "Fleet Dark",
-		"light": "Fleet Light"
-	},
-	"buffer_font_size": 15,
-	"ui_font_size": 15,
-	"ui_font_weight": 600,
-	"buffer_font_weight": 600,
-	"ui_font_family": "FiraCode Nerd Font",
-	"buffer_font_family": "FiraCode Nerd Font",
-	"ui_font_features": {
-		"calt": false
-	},
-	"buffer_font_features": {
-		"calt": false
-	},
-	"use_system_window_tabs": true,
+  "theme": {
+    "mode": "system",
+    "dark": "Fleet Dark",
+    "light": "Fleet Light"
+  },
+  "buffer_font_size": 15,
+  "ui_font_size": 15,
+  "ui_font_weight": 600,
+  "buffer_font_weight": 600,
+  "ui_font_family": "FiraCode Nerd Font",
+  "buffer_font_family": "FiraCode Nerd Font",
+  "ui_font_features": {
+    "calt": false
+  },
+  "buffer_font_features": {
+    "calt": false
+  },
+  "use_system_window_tabs": true,
 
-	"vim_mode": true,
-	"vim": {
-		"use_smartcase_find": true
-	},
-	"use_smartcase_search": true,
-	"pane_split_direction_horizontal": "down",
-	"pane_split_direction_vertical": "right",
+  "vim_mode": true,
+  "vim": {
+    "use_smartcase_find": true
+  },
+  "use_smartcase_search": true,
+  "pane_split_direction_horizontal": "down",
+  "pane_split_direction_vertical": "right",
 
-	"features": { "edit_prediction_provider": "none" },
-	"hard_tabs": true,
-	"soft_wrap": "editor_width",
-	"relative_line_numbers": true,
-	"terminal": {
-		"shell": {
-			"program": "/opt/homebrew/bin/fish"
-		}
-	},
+  "features": { "edit_prediction_provider": "none" },
+  "hard_tabs": true,
+  "soft_wrap": "editor_width",
+  "relative_line_numbers": "enabled",
+  "terminal": {
+    "toolbar": {
+      "breadcrumbs": false
+    },
+    "shell": {
+      "program": "/opt/homebrew/bin/fish"
+    }
+  },
 
-	"languages": {
-		"YAML": {
-			"hard_tabs": false
-		}
-	},
+  "languages": {
+    "Rust": {
+      "inlay_hints": {
+        "show_parameter_hints": true,
+        "show_background": false,
+        "show_type_hints": true,
+        "enabled": false
+      }
+    },
+    "YAML": {
+      "hard_tabs": false
+    }
+  },
 
-	// disable some defaults
-	"collaboration_panel": { "button": false },
-	// "tab_bar": { "show": false },
-	// "toolbar": { "quick_actions": true },
-	"telemetry": { "diagnostics": false, "metrics": false },
-	"auto_update": false,
-	"gutter": { "folds": false }
+  // disable some defaults
+  "collaboration_panel": { "button": false },
+  // "tab_bar": { "show": false },
+  // "toolbar": { "quick_actions": true },
+  "telemetry": { "diagnostics": false, "metrics": false },
+  "auto_update": false,
+  "gutter": { "folds": false }
 }
